--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
     
     </div>
     
-<img src="/images/pattern-divider-desktop.svg" alt="">
+<!-- <img src="/images/pattern-divider-desktop.svg" alt=""> -->
+    <picture>
+      <source 
+        media="(min-width: 768px)"
+        srcset="images/pattern-divider-desktop.svg">
+      <img src="images/pattern-divider-mobile.svg" alt="">
+    </picture>
 
     <div id="dice">
       <img src = "images/icon-dice.svg" alt="Dice"/>
