Removed footer, set fixed width on Advice container

--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Advice generator app</title>
 
 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <div class="advice-container">
+<main>
+  <div class="advice-container" id="advice-transition">
 
     <div class="advice-id">
       <span>Advice <span id="advice-ID">#</span></span>
@@ -24,10 +23,7 @@
       <p>
         "<span id="advice-text"></span>"
       </p>
-    
     </div>
-    
-<!-- <img src="/images/pattern-divider-desktop.svg" alt=""> -->
     <picture>
       <source 
         media="(min-width: 768px)"
@@ -41,11 +37,7 @@
 
   </div>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/krysmalskipl">Kub</a>.
-  </div>
-
+</main>
   <script src="script.js"></script>
 </body>
 </html>
